@@ -12,9 +12,14 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $RCSfile: ChangeLog,v $ $Revision: 1.140 $ $Date: 2009-02-22 19:07:23 $ $Author: christian $
+# @version $RCSfile: ChangeLog,v $ $Revision: 1.141 $ $Date: 2009-02-23 22:53:30 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+2009-02-23  Christian Heller  <christian.heller@tuxtax.de>
+        * Add file "compound_http_name.c" for storing parsed http elements in one compound model
+        * Add file "part_accessor.c"
+        * Continue http request parser
 
 2009-02-21  Christian Heller  <christian.heller@tuxtax.de>
         * Readd files "http_request_converter.c" and "http_response_converter.c"
